force-app/main/default/objects/Shared_Solar_System_Order__c/Shared_Solar_System_Order__c.object-meta.xml
<CustomObject>
    <label>Shared Solar System Order</label>
    <nameField>
        
        <displayFormat>SSSO-{00000}</displayFormat>
        
        <label>Shared Solar System Order Name</label>
        
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Shared Solar System Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>