force-app/main/default/objects/Shared_Solar_System_Order__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <inlineHelpText>This reflects the current status of the order. Once the order is approved, it will update the related Shared Solar System.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>New</fullName>
                
                    <default>true</default>
                
                    <label>New</label>
                
                </value>
            
                <value>
                
                    <fullName>Pending Approval</fullName>
                
                
                    <label>Pending Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Rejected</fullName>
                
                
                    <label>Rejected</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>