force-app/main/default/objects/Shared_Solar_System_Order__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <inlineHelpText>This field is set automatically once the SSSO has been approved.</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>