force-app/main/default/objects/Shared_Solar_System_Order__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SSS record that the order is for.</description>
    <inlineHelpText>This is the Shared Solar System that will be updated once the order is approved.</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Shared Solar System Orders</relationshipLabel>
    <relationshipName>Shared_Solar_System_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>