force-app/main/default/objects/Shared_Solar_System_Order__c/fields/Total_System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_DC__c</fullName>
    <inlineHelpText>This will be the new value of the kW DC System Size field on the related Shared Solar System once the order is approved.</inlineHelpText>
    <label>Total System Size (kW DC)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>