force-app/main/default/objects/Shared_Solar_System_Order__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <inlineHelpText>This is the new yield that will be set on the related Shared Solar System once this order is approved.</inlineHelpText>
    <label>Yield</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>